Fix a bug where the uploaded image would appear cropped

--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,7 @@ section.min-fullscreen.transparent-menu { min-height: 100%; top: 0; padding-top:
 .ph_post.input > .ph_post_info { padding: 10px 0 10px 70px; }
 .ph_post.input > .ph_post_info > .ph_fi_submit { right: 20px; top: 20px; transform: translateY(0); }
 .ph_post.input > .ph_post_media { max-height: 100%; border-radius: 4px; overflow: hidden; background-color: rgb(15,15,15); }
-.ph_post.input > .ph_post_media > img { position: relative; filter: blur(0); }
+.ph_post.input > .ph_post_media > img { position: relative; filter: blur(0); transform: none; }
 .ph_post.input > .ph_post_media > .actions { z-index: +4; white-space: nowrap; padding: 10px; position: absolute; top: 0; right: 0; transform: translate(0,0);}
 .ph_post.input > .ph_post_media > .actions > span { display: inline-block;  color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.25); cursor: pointer; }
 .ph_post.input > .ph_post_media > .actions > span i { color: inherit; font-size: 30px; }
